style.css
* {
  scrollbar-width: none; 
}

.scroll-container {
  scrollbar-width: thin;
}

.scroll-container::-webkit-scrollbar {
  width: 8px;
}


@font-face {
  font-family: 'Meiryo';
  src: url('other/meiryofont.woff2') format('woff2');
  font-style: normal;
  font-display: swap;
}
.element::-webkit-scrollbar {
  display: none; 

}
html{
  scroll-behavior: smooth;
}
body{
  
  margin:0;
  padding:0;
  font-family: 'Meiryo', sans-serif;
}
body{
  background-color:#122109;
  color:#FFFAE0
}
#header{
  position: sticky;
  top: 0;
  z-index: 1000;
   background-image: url('pics/uistuff/texturev5.png')}

.navcontainer{
  padding:3px 3%;
}

nav ul {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  gap: 16px;
}

.logo{
  width:120px;
  max-width:100%;
  height: auto;
    vertical-align: middle;
}
nav ul li {
    font-weight: bold;

  display: inline-block;
  align-items: center;
  list-style: none;
  gap:12px;

}
a:hover {
  color: black;
}
nav ul li a{
  text-decoration: none;
  font-size: 14px;
  color:white  ;
  position:relative;
}
nav ul li a::after{
  content:'';
  width:0;
  height:2px;
  background:#122109;
  position:absolute;
  left:0;
  bottom:-5px;
  transition: 0.2s;
}
nav ul li a:hover::after{
  width:100%;
}
.row{
  display: flex;
  flex-wrap: wrap
}
.sub-title{
  font-size:20px;
  font-weight:600;
  color:white;
}

html { cursor: url('./pics/uistuff/cursor/darksmileygreen.png'), auto; }
a:hover { cursor: url('./pics/uistuff/cursor/smileygreen3.png'), pointer; }

.contact-left{
  flex-basis:35%;
}

.contact-right{
  flex-basis:60%;
}
.contact-left p{
  margin-top:20px;
}
.btn{
  display:block;
  width: fit-content;
  padding:5px;
  border:1px solid black;
  border-radius: 3px;
  text-decoration: none;
  color:#122109;
  transition:background 0.5s;
}
.btn:hover{
  background-color:#FFFAE0;
}
.btn.btn2{
  display:inline-block;
  background-color: #FFFAE0;
}
.social-icons a{
  padding:10px;
    display: inline-block;
  transition: transform 0.5s;
}
.social-icons a:hover{
  transform:translatey(-5px);
}
.contact-right form{
  width:100%;
}
form input, form textarea{
  width:100%;
  border:0px;
  outline:none;
  background:#FFFAE0;
  padding:3px;
  margin:20px auto;
  color:#122109;
  font-size:18px;
  border-radius:6px;
}
form .btn2{
  padding:10px;
  font-size:15px;
  margin-top:20px;

}



.filmbox {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 40px;
  padding: 20px 0 200px 0; 
}

.video {
  width: 80%;
  max-width: 900px;
  text-align: center;
}
.video:last-child {
  margin-bottom: 100px;
}

.video iframe {
  width: 90%;
  aspect-ratio: 16 / 9;
  display: block;
  border: none;
  margin: 0 auto;
}

.video p {
  margin: 10px 0 0 0;
  text-align: center;
  line-height: 1.5;
  font-size: 16px;
  color: #FFFAE0;
}

@media (max-width: 768px) {
  .video {
    width: 95%;
  }
  .video p {
    font-size: 14px;
  }
}
iframe {
    display: block;
}
.container {
  margin-left: 10%;
  margin-right: 10%;
  display: flex; 
  justify-content: center;   
gap: 10px; 
  overflow-x: auto;  
 flex-wrap: nowrap; 
  justify-content: flex-start;}

.container img {
height: 100px%; 
max-width: 100%;
flex-shrink: 0}


p{
padding: 3px 0px 2px 0px;
margin:0 10%;
}

